python/rregadmin/util/path_info_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -r ^rra_path_info$ -r rra_path_info_.* -r ^RRA_PATH_MODE$ -o path_info_wrapper.py path_info_wrapper.xml'
from ctypes import *

from rregadmin.util.glib_wrapper import guint32
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.glib_wrapper import gboolean
STRING = c_char_p


# ../../../rregadmin/util/path_info.h 36
class rra_path_info_(Structure):
    pass
rra_path_info_._fields_ = [
    # ../../../rregadmin/util/path_info.h 36
]
rra_path_info = rra_path_info_

# values for enumeration 'RRA_PATH_MODE'
RRA_PATH_OPT_IN_XML_ESCAPES = 16
RRA_PATH_OPT_OUT_XML_ESCAPES = 32
RRA_PATH_OPT_OUT_MINIMAL_XML_ESCAPES = 64
RRA_PATH_OPT_IN_WIN_DELIMITER = 256
RRA_PATH_OPT_IN_UNIX_DELIMITER = 512
RRA_PATH_OPT_OUT_WIN_DELIMITER = 4096
RRA_PATH_OPT_CASE_INSENSITIVE = 16777216
RRA_PATH_OPT_WIN = 16781568
RRA_PATH_OPT_UNIX = 592
RRA_PATH_OPT_MIX = 16782160
RRA_PATH_MODE = c_int # enum
rra_path_mode = guint32
# ../../../rregadmin/util/path_info.h 105
rra_path_info_new = _libraries['librregadmin.so.1'].rra_path_info_new
rra_path_info_new.restype = POINTER(rra_path_info)
# rra_path_info_new(in_mode)
rra_path_info_new.argtypes = [rra_path_mode]
rra_path_info_new.__doc__ = \
"""rra_path_info * rra_path_info_new(rra_path_mode in_mode)
../../../rregadmin/util/path_info.h:105"""
# ../../../rregadmin/util/path_info.h 111
rra_path_info_free = _libraries['librregadmin.so.1'].rra_path_info_free
rra_path_info_free.restype = gboolean
# rra_path_info_free(in_pi)
rra_path_info_free.argtypes = [POINTER(rra_path_info)]
rra_path_info_free.__doc__ = \
"""gboolean rra_path_info_free(rra_path_info * in_pi)
../../../rregadmin/util/path_info.h:111"""
# ../../../rregadmin/util/path_info.h 117
rra_path_info_get_delim = _libraries['librregadmin.so.1'].rra_path_info_get_delim
rra_path_info_get_delim.restype = STRING
# rra_path_info_get_delim(in_pi)
rra_path_info_get_delim.argtypes = [POINTER(rra_path_info)]
rra_path_info_get_delim.__doc__ = \
"""unknown * rra_path_info_get_delim(unknown * in_pi)
../../../rregadmin/util/path_info.h:117"""
# ../../../rregadmin/util/path_info.h 124
rra_path_info_is_delim = _libraries['librregadmin.so.1'].rra_path_info_is_delim
rra_path_info_is_delim.restype = gboolean
# rra_path_info_is_delim(in_pi, in_str)
rra_path_info_is_delim.argtypes = [POINTER(rra_path_info), STRING]
rra_path_info_is_delim.__doc__ = \
"""gboolean rra_path_info_is_delim(unknown * in_pi, unknown * in_str)
../../../rregadmin/util/path_info.h:124"""
# ../../../rregadmin/util/path_info.h 131
rra_path_info_contains_delim = _libraries['librregadmin.so.1'].rra_path_info_contains_delim
rra_path_info_contains_delim.restype = gboolean
# rra_path_info_contains_delim(in_pi, in_str)
rra_path_info_contains_delim.argtypes = [POINTER(rra_path_info), STRING]
rra_path_info_contains_delim.__doc__ = \
"""gboolean rra_path_info_contains_delim(unknown * in_pi, unknown * in_str)
../../../rregadmin/util/path_info.h:131"""
# ../../../rregadmin/util/path_info.h 137
rra_path_info_get_mode = _libraries['librregadmin.so.1'].rra_path_info_get_mode
rra_path_info_get_mode.restype = rra_path_mode
# rra_path_info_get_mode(in_pi)
rra_path_info_get_mode.argtypes = [POINTER(rra_path_info)]
rra_path_info_get_mode.__doc__ = \
"""rra_path_mode rra_path_info_get_mode(unknown * in_pi)
../../../rregadmin/util/path_info.h:137"""
# ../../../rregadmin/util/path_info.h 143
rra_path_info_set_mode = _libraries['librregadmin.so.1'].rra_path_info_set_mode
rra_path_info_set_mode.restype = gboolean
# rra_path_info_set_mode(in_pi, in_mode)
rra_path_info_set_mode.argtypes = [POINTER(rra_path_info), rra_path_mode]
rra_path_info_set_mode.__doc__ = \
"""gboolean rra_path_info_set_mode(rra_path_info * in_pi, rra_path_mode in_mode)
../../../rregadmin/util/path_info.h:143"""
# ../../../rregadmin/util/path_info.h 150
rra_path_info_has_option = _libraries['librregadmin.so.1'].rra_path_info_has_option
rra_path_info_has_option.restype = gboolean
# rra_path_info_has_option(in_pi, in_mode)
rra_path_info_has_option.argtypes = [POINTER(rra_path_info), rra_path_mode]
rra_path_info_has_option.__doc__ = \
"""gboolean rra_path_info_has_option(unknown * in_pi, rra_path_mode in_mode)
../../../rregadmin/util/path_info.h:150"""
# ../../../rregadmin/util/path_info.h 157
rra_path_info_set_option = _libraries['librregadmin.so.1'].rra_path_info_set_option
rra_path_info_set_option.restype = gboolean
# rra_path_info_set_option(in_pi, in_mode)
rra_path_info_set_option.argtypes = [POINTER(rra_path_info), rra_path_mode]
rra_path_info_set_option.__doc__ = \
"""gboolean rra_path_info_set_option(rra_path_info * in_pi, rra_path_mode in_mode)
../../../rregadmin/util/path_info.h:157"""
# ../../../rregadmin/util/path_info.h 164
rra_path_info_unset_option = _libraries['librregadmin.so.1'].rra_path_info_unset_option
rra_path_info_unset_option.restype = gboolean
# rra_path_info_unset_option(in_pi, in_mode)
rra_path_info_unset_option.argtypes = [POINTER(rra_path_info), rra_path_mode]
rra_path_info_unset_option.__doc__ = \
"""gboolean rra_path_info_unset_option(rra_path_info * in_pi, rra_path_mode in_mode)
../../../rregadmin/util/path_info.h:164"""
__all__ = ['rra_path_info_get_mode', 'rra_path_mode',
           'rra_path_info_', 'RRA_PATH_OPT_CASE_INSENSITIVE',
           'rra_path_info_new', 'rra_path_info_is_delim',
           'RRA_PATH_OPT_OUT_MINIMAL_XML_ESCAPES',
           'rra_path_info_get_delim',
           'RRA_PATH_OPT_OUT_WIN_DELIMITER', 'RRA_PATH_MODE',
           'RRA_PATH_OPT_MIX', 'rra_path_info_set_option',
           'rra_path_info_free', 'RRA_PATH_OPT_UNIX',
           'rra_path_info_set_mode', 'RRA_PATH_OPT_WIN',
           'rra_path_info_contains_delim', 'rra_path_info_has_option',
           'RRA_PATH_OPT_OUT_XML_ESCAPES',
           'RRA_PATH_OPT_IN_UNIX_DELIMITER',
           'RRA_PATH_OPT_IN_XML_ESCAPES',
           'rra_path_info_unset_option',
           'RRA_PATH_OPT_IN_WIN_DELIMITER', 'rra_path_info']
